--- a/Targetitas/style/producto.css
+++ b/Targetitas/style/producto.css
@@ -20,10 +20,9 @@ body{
 .caja-producto{
     margin:auto;
     display:flex;
-    justify-content: flex-star;
+    justify-content: center;
     flex-wrap: wrap;
     width: 80%;
-    
 }
 /*objeto donde va el contenido de los cafes*/
 .caja{
@@ -31,6 +30,7 @@ body{
     margin: 20px 20px;
     box-shadow: 4px 4px 4px 2px black;
     border-radius: 6px;
+    text-align: center;
     width: 250px;
     -webkit-transition: width 0.5s ease 0s,height 0.5s ease 0s;
 }
@@ -41,28 +41,30 @@ body{
     border-radius: 6px 6px 0 0;
 }
 .caja p{
-    font-family: 'Courier New', Courier, monospace;
-    font-weight:bold;
-    margin-left: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight:400;
+}
+.caja h1{
+    font-family: 'Poppins', sans-serif;
+    font-weight:500;
 }
 
 
 
 .caja button{
     text-decoration: none;
-    width: 90%;
-    color: white;
-    background: rgb(255, 157, 45);
-    height: 30px;
+    width: 100px;
+    color: rgb(28, 110, 3);
+    font-family: 'Poppins', sans-serif;
+    background: rgb(204, 204, 204);
+    height: 40px;
     margin: auto;
+    font-weight:400;
     font-size: 20px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight:bold;
     border-radius: 6px;
+    border: 2px solid rgb(28, 110, 3);
 }
-button:hover{
-    background: rgb(255, 124, 37);
-}
+
 .idProducto{
     display:none;
 }
