--- a/Targetitas/style/producto.css
+++ b/Targetitas/style/producto.css
@@ -29,16 +29,17 @@ body{
     background: white;
     margin: 20px 20px;
     box-shadow: 4px 4px 4px 2px black;
-    border-radius: 6px;
+    border-radius: 20px;
     text-align: center;
-    width: 250px;
-    -webkit-transition: width 0.5s ease 0s,height 0.5s ease 0s;
+    width: 260px;
 }
 /*contenido de los cafes*/
 .caja img{
-    width: 100%;
-    height: 240px;
-    border-radius: 6px 6px 0 0;
+    width: 170px;
+    height: 130px;
+    border-radius: 50%;
+    border: 4px solid white;
+    margin-top: 20px;
 }
 .caja p{
     font-family: 'Poppins', sans-serif;
@@ -48,7 +49,11 @@ body{
     font-family: 'Poppins', sans-serif;
     font-weight:500;
 }
-
+.caja-imagen{
+    height: 180px;
+    background: rgb(33, 63, 47);
+    border-radius: 20px 20px 0 20px;
+}
 
 
 .caja button{
