--- a/Targetitas/style/producto.css
+++ b/Targetitas/style/producto.css
@@ -20,7 +20,7 @@ body{
 .caja-producto{
     margin:auto;
     display:flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     width: 80%;
 }
@@ -44,10 +44,12 @@ body{
 .caja p{
     font-family: 'Poppins', sans-serif;
     font-weight:400;
+    margin-top: 0;
 }
 .caja h1{
     font-family: 'Poppins', sans-serif;
     font-weight:500;
+    margin-bottom: 0;
 }
 .caja-imagen{
     height: 180px;
@@ -69,7 +71,9 @@ body{
     border-radius: 6px;
     border: 2px solid rgb(28, 110, 3);
 }
-
+.caja-imagen{
+    
+}
 .idProducto{
     display:none;
 }
